test_suite/alan-2022-examples/failing/001340_mutation.alan
source W begin call t(,) end
